Add Mains menu details

--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -21,7 +21,137 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                <div class="my-2 p-2">
+                    <div class="d-block mx-1">
+                        <div class="grid-template-kids-menu d-grid g-3">
 
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Starters</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Halloumi Fries<span>6.75</span></strong>
+                                        <p class="card-text">Served with chilli jam and rocket.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Soup of the day<span>5.25</span></strong>
+                                        <p class="card-text">Served with toasted ciabatta.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <br>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Brushetta<span>7.70</span></strong>
+                                        <p class="card-text">Toasted ciabatta bread with marinated Roma tomatoes, garlic, olive oil, basil and balsamic glaze.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Houmous, Pesto & Bread<span>7.25</span></strong>
+                                        <p class="card-text">Red pepper houmous and basil pesto served with toasted ciabatta.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Mains</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Hunter's Chicken<span>14.95</span></strong>
+                                        <p class="card-text">Chicken breast topped with smoked streaky bacon melted cheddar & mozzarella and Texan BBQ sauce. Served with chips, a dressed salad garnish and onion rings.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Grilled Gammon<span>13.95</span></strong>
+                                        <p class="card-text">8oz grilled gammon steak with chips and garden peas, topped with fried free-range egg and grilled pineapple.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <br>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Fish and Chips<span>15.95</span></strong>
+                                        <p class="card-text">Freshly hand-battered fish with chips and tartare sauce. Served with mushy peas or garden peas.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Battered Halloumi and Chips<span>13.95</span></strong>
+                                        <p class="card-text">Freshly hand-battered halloumi with chips and tartare sauce. Served with mushy peas or garden peas.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Steaks</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>8oz Rump<span>16.95</span></strong>
+                                        <p class="card-text">28-day-aged and then perfectly grilled. Served with chips, onion rings, half a grilled tomato and rocket.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Mixed Grill<span>19.95</span></strong>
+                                        <p class="card-text">Rump steak, chicken breast, two pork sausages and gammon steak, topped with fried free-range egg and grilled pineapple.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Pies</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Mushroom and Ale Pie<span>14.95</span></strong>
+                                        <p class="card-text">Roasted mushrooms, onion and tarragon in a vegan suet pastry.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Beef and Ale Pie<span>14.95</span></strong>
+                                        <p class="card-text">British beef and rich Ruddles ale gravy in shortcrust pastry.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Desserts</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Sticky Toffee Pudding<span>7.25</span></strong>
+                                        <p class="card-text">Served with your choice of custard or Jersey clotted cream ice cream.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Bramley Apple & Blackberry Crumble Pie<span>6.45</span></strong>
+                                        <p class="card-text">Served with raspberries and your choice of custard or Jersey clotted cream ice cream.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <br>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Chocolate Fudge Cake<span>5.75</span></strong>
+                                        <p class="card-text">Served with your choice of Jersey clotted ice cream or custard.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Ice Cream<span>6.75</span></strong>
+                                        <p class="card-text">Your choice of three scoops of ice cream and sauce. Flavours: Chocolate, Lemon Sorbet, Vanilla & Coconut, Frozen Strawberry Yoghurt. Sauce: Chocolate, Strawberry, Raspberry, Salted Caramel.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="tab-pane fade d-flex justify-content-evenly" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
@@ -31,85 +161,84 @@
                         <p class="d-block">Pick Either: Main + 2 Veggies or Main + Side + Veggie - <span><strong>5.00</strong></span></p>
                     </div>
                     <div class="d-block mx-1">
-                    <div class="grid-template-kids-menu d-grid g-3">
-                    <div class="p-4">
-                        <h5 class="text-uppercase">Mains</h5>
-                        <div class="col">
-                            <article class="col p-1">
-                            <p><strong>Two Pork Sausages</strong>
-                            <p class="card-text">Served with gravy.</p>
-                            </article>
-                            <article class="col p-1">
-                            <p><strong>Two Meat-Free Sausages</strong>
-                            <p class="card-text">Served with vegan gravy.</p>
-                            </article>
-                            <article class="col p-1">
-                            <p><strong>Fish Fingers </strong>
-                            <p class="card-text">Three breaded fish fingers.</p>
-                            </article>
-                            <article class="col p-1">
-                            <p><strong>Chicken Nuggets </strong>
-                            <p class="card-text">5 chicken nuggets.</p>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <section class="p-4">
-                            <h5 class="text-uppercase">Veggies</h5>
-                            <div class="veggies-kids-menu col">
-                                <p class="col"><strong>Corn on the Cob</strong>
-                                <p><strong>Baked Beans</strong>
-                                <p><strong>Carrot & Cucumber Sticks</strong>
-                                <p><strong>Garden Peas</strong>
-                            </div>
-                        </section>
-                        <section class="p-4">
-                            <h5 class="text-uppercase">Sides</h5>
-                            <div class="sides-kids-menu col">
-                                <p class="col"><strong>Jacket Potato</strong>
-                                <p><strong>Mashed Potato</strong>
-                                <p><strong>Chips</strong>
-                                <p><strong>Garlic Bread</strong>
-                            </div>
-                        </section>
-                    </div>                    
-                        <div class="p-4">
-                            <h5 class="text-uppercase">Desserts</h5>
-                            <div>
-                                <div class="col p-4">
+                        <div class="grid-template-kids-menu d-grid g-3">
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Mains</h5>
+                                <div class="col">
                                     <article class="col p-1">
-                                    <p><strong>Chocolate Brownie<span>2.00</span></strong>
-                                    <p class="card-text">With chocolate sauce and vanilla flavour ice cream.</p>
+                                    <p><strong>Two Pork Sausages</strong>
+                                    <p class="card-text">Served with gravy.</p>
                                     </article>
                                     <article class="col p-1">
-                                    <p><strong>Brownie & Rainbow Chocolate Sundae<span>2.00</span></strong>
-                                    <p class="card-text">One scoop of vanilla and one scoop of chocolate flavoured ice cream, topped with chocolate brownie pieces, rainbow shelled chocolate drops and cream.</p>
+                                    <p><strong>Two Meat-Free Sausages</strong>
+                                    <p class="card-text">Served with vegan gravy.</p>
+                                    </article>
+                                    <article class="col p-1">
+                                    <p><strong>Fish Fingers </strong>
+                                    <p class="card-text">Three breaded fish fingers.</p>
+                                    </article>
+                                    <article class="col p-1">
+                                    <p><strong>Chicken Nuggets </strong>
+                                    <p class="card-text">5 chicken nuggets.</p>
                                     </article>
                                 </div>
                             </div>
-                        </div>
-                        <div class="p-4">
-                            <br>
-                            <div>
-                                <div class="col p-4">
-                                    <article class="col p-1">
-                                    <p><strong>Strawberry Sundae<span>2.00</span></strong>
-                                    <p class="card-text">Two scoops of vanilla flavour ice cream topped with strawberry pieces, strawberry flavour sauce and cream.</p>
-                                    </article>
-                                    <article class="col p-1">
-                                    <p><strong>Ice Cream<span>2.00</span></strong>
-                                    <p class="card-text">Two scoops. (one scoop 1.00) Flavours: Vanilla, Chocolate, Lemon Sorbet, Vegan Vanilla. Sauce: Chocolate, Strawberry.</p>
-                                    </article>
+                            <div class="p-4">
+                                <section class="p-4">
+                                    <h5 class="text-uppercase">Veggies</h5>
+                                    <div class="veggies-kids-menu col">
+                                        <p class="col"><strong>Corn on the Cob</strong>
+                                        <p><strong>Baked Beans</strong>
+                                        <p><strong>Carrot & Cucumber Sticks</strong>
+                                        <p><strong>Garden Peas</strong>
+                                    </div>
+                                </section>
+                                <section class="p-4">
+                                    <h5 class="text-uppercase">Sides</h5>
+                                    <div class="sides-kids-menu col">
+                                        <p class="col"><strong>Jacket Potato</strong>
+                                        <p><strong>Mashed Potato</strong>
+                                        <p><strong>Chips</strong>
+                                        <p><strong>Garlic Bread</strong>
+                                    </div>
+                                </section>
+                            </div>                    
+                            <div class="p-4">
+                                <h5 class="text-uppercase">Desserts</h5>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Chocolate Brownie<span>2.00</span></strong>
+                                        <p class="card-text">With chocolate sauce and vanilla flavour ice cream.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Brownie & Rainbow Chocolate Sundae<span>2.00</span></strong>
+                                        <p class="card-text">One scoop of vanilla and one scoop of chocolate flavoured ice cream, topped with chocolate brownie pieces, rainbow shelled chocolate drops and cream.</p>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <br>
+                                <div>
+                                    <div class="col p-4">
+                                        <article class="col p-1">
+                                        <p><strong>Strawberry Sundae<span>2.00</span></strong>
+                                        <p class="card-text">Two scoops of vanilla flavour ice cream topped with strawberry pieces, strawberry flavour sauce and cream.</p>
+                                        </article>
+                                        <article class="col p-1">
+                                        <p><strong>Ice Cream<span>2.00</span></strong>
+                                        <p class="card-text">Two scoops. (one scoop 1.00) Flavours: Vanilla, Chocolate, Lemon Sorbet, Vegan Vanilla. Sauce: Chocolate, Strawberry.</p>
+                                        </article>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
 
             <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
-            </div>
         </div>
    </div>
 </div>
