Add user is logged in when authenticated

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,9 +124,18 @@
         </header>
 
         <!-- Main Content -->
-         {% block content %}
-         <!-- Content goes here -->
-         {% endblock content %}
+        <main class="flex-shrink-0 main-bg">
+            {% if user.is_authenticated %}
+            <p class="text-end m-3">You are logged in as {{ user }}</p>
+            {% else %}
+            <p class="text-end m-3">You are not logged in.</p>
+            {% endif %}
+
+            {% block content %}
+            <!-- Content goes here -->
+            {% endblock content %}
+
+         </main>
 
         <!-- Footer -->
         <footer class="footer container-fluid mt-auto">
