--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -24,7 +24,7 @@
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
           {% endif %}
           <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
-          <a href="{{ index_url }}" class="btn btn-primary action-btn mb-2 px-2 mx-2">Cancel</a>
+          <a href="{{ index_url }}" class="btn btn-secondary action-btn px-2 mx-2">Cancel</a>
         </form>
       </div>  
     </div>
