--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -7,27 +7,31 @@
 {% block content %}
 
 <div class="container-fluid my-2">
-  <div class="signup-container card h-auto">
-    <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">   
-        <h2 class="card-header text-center my-2">{% trans "Sign Out" %}</h2>
+  <div class="signup-container card h-auto justify-content-center">
+        <div class="row">
+          <div class="col-md-8 mt-3 offset-md-2">   
+            <h2 class="card-header text-center my-2">{% trans "Sign Out" %}</h2>
 
-        <p>{% trans 'Are you sure you want to sign out?' %}</p>
-      </div>
-    </div>
-      <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">  
+            <p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
+          </div>
+        </div>
 
-        <form method="post" action="{% url 'account_logout' %}">
-          {% csrf_token %}
-          {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-          {% endif %}
-          <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
-          <a href="{{ index_url }}" class="btn btn-secondary action-btn px-2 mx-2">Cancel</a>
-        </form>
-      </div>  
-    </div>
+        <div class="row">
+          <div class="col-md-8 mt-3 offset-md-2">  
+
+            <form method="post" action="{% url 'account_logout' %}">
+              {% csrf_token %}
+              {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+              {% endif %}
+              <div class="form-btns d-flex justify-content-center mb-2">
+                <button class="btn btn-primary me-2" type="submit">{% trans 'Sign Out' %}</button>
+                <a href="{{ index_url }}" class="btn btn-secondary action-btn px-2 mx-2">Cancel</a>
+              </div>
+            </form>
+
+          </div>
+        </div> 
   </div>
 </div>
 
