--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,24 +10,26 @@
 {% block content %}
 
 <div class="container-fluid my-2">
-  <div class="signup-container card h-auto">
+  <div class="signup-container card h-auto justify-content-center">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2">      
         <h2 class="card-header text-center my-2">{% trans "Sign In" %}</h2>
-          <p>{% blocktrans %}Welcome to Family Favourites. If you have not created an account yet, then please
-          <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+          <p class="text-center p-1">{% blocktrans %}Welcome to Family Favourites. If you have not created an account yet, then please
+          <strong><a href="{{ signup_url }}">sign up</a></strong> first.{% endblocktrans %}</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">  
-        <form class="login" method="POST" action="{% url 'account_login' %}">
+      <div class="col-md-8 offset-md-2">  
+        <form class="login justify-content-center m-2 p-2" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
           {{ form | crispy }}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <a class="button btn btn-secondary secondaryAction px-2 py-2" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-          <button class="primaryAction btn btn-primary mx-3" type="submit">{% trans "Sign In" %}</button>
+          <div class="form-btns d-flex justify-content-center mb-2">
+            <a class="button btn btn-secondary secondaryAction px-2 py-2" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+            <button class="primaryAction btn btn-primary mx-3" type="submit">{% trans "Sign In" %}</button>
+          </div>
         </form>
       </div>  
     </div>
