--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -18,7 +18,7 @@
     <div class="card h-auto">
         <h2 class="card-header text-center mb-4">Contact Us</h2>
         <div class="card-body">
-            <div class="book-a-table row g-3 justify-content-center text-center">
+            <div class="row g-3 justify-content-center text-center">
                 <form method="post" action="{% url 'contact' %}" class="col col-sm-4 col-md-8">
                     {% csrf_token %}
                     {{ form | crispy }}
