--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                                 <div class="book-a-table m-2 p-2">
-                                    <button class="book-table-btn btn btn-primary hidden m-2 p-2">
+                                    <button class="book-table-btn btn btn-primary m-2 p-2">
                                         <a class="nav-link {% if request.path == book_a_table_url %}active" aria-current="page{% endif %}" href="{% url 'book_a_table' %}">Book a Table</a>
                                     </button>
                                 </div>
